--- a/ExpenseTracker/Signup/signup.html
+++ b/ExpenseTracker/Signup/signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>signup/login</title>
+    <title>Auth</title>
   </head>
   <body>
     <form onsubmit="signup(event)">
